...
                                                    <fontDescription key="fontDescription" name="SFPro-Regular" family="SF Pro" pointSize="13"/>
                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GPk-JZ-hAe">
                                                    <rect key="frame" x="331" y="11" width="42" height="42"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="likeButton"/>
                                                    <color key="tintColor" red="0.96078431372549022" green="0.41960784313725491" blue="0.42352941176470588" alpha="1" colorSpace="calibratedRGB"/>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="like_button_on"/>
                                                    <connections>
                                                        <action selector="likeButtonClicked" destination="Tr3-jr-bhP" eventType="touchUpInside" id="bCu-WB-Nec"/>
                                                    </connections>
...
                                <connections>
                                    <outlet property="delegate" destination="ch1-uM-KA1" id="BEw-iW-KGr"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CAB-qz-r6f">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="backButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="7RS-f3-Vqg"/>
                                    <constraint firstAttribute="width" constant="48" id="s8M-SL-HQh"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
...
                                    <constraint firstAttribute="width" constant="60" id="hyu-Tb-bdW"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sgw-mu-gf0">
                                <rect key="frame" x="16" y="659" width="361" height="48"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="coS-b4-pO6"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <color key="tintColor" red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
